2012-10-20  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-22, released to CRAN on ..

	* R/ps.goodies.R (dev.latex): oops: finally found and fixed bug
	where the missing(.) checks where never true, as dev.latex() is
	always called from above with explicit argument passing.

	* man/histBxp.Rd: renamed hist.bxp() to histBxp() .. on CRAN's
	urging.

2012-09-26  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/prettylab.R (eaxis): new 'small.args' for Marius

2012-04-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* man/unix/Sys.cpuinfo.Rd: fix example

2012-03-18  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-20, released to CRAN on 2012-03-18

	* man/capture-n-write.Rd: new capture.and.write() function

2011-11-21  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/misc-goodies.R (seqXtend): change to enable "interpolate" with
	'Date' objects.

2011-10-16  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-19, released to CRAN on 2011-11-21

	* man/str_data.Rd: + examples for 'filterFUN'

2011-10-08  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/str_data.R (str_data): new arg 'filterFUN'

2011-10-03  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-18, released to CRAN.
	* R/prettylab.R (eaxis): fix Rversion check.

2011-10-01  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/prettylab.R (pretty10exp): digits.fuzz = 7:
	add fuzz before rounding, twice.
	(eaxis): new arg  draw.between.ticks = TRUE.

2011-07-29  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-17, released to CRAN on 2011-10-01.

	* R/sourceAttach.R (sourceAttach): new utility function

2011-07-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 1.0-16, released to CRAN.

	* R/pd-matrix.R (posdefify): symmetric = TRUE is now default, as
	that's needed for asymmetric input.
