@@ -1,7 +1,7 @@
 Package: sfsmisc
-Version: 1.0-22
-Date: 2012-10-20
-Author: Martin Maechler and many others.
+Version: 1.0-23
+Date: 2012-11-01
+Author: Martin Maechler et al.
 Maintainer: Martin Maechler <maechler@stat.math.ethz.ch>
 Title: Utilities from Seminar fuer Statistik ETH Zurich
 Description: Useful utilities ['goodies'] from Seminar fuer Statistik
@@ -12,6 +12,6 @@ Suggests: datasets, tcltk, cluster, MASS, Matrix, nlme, lokern
 Enhances: mgcv, rpart, nor1mix, polycor, sm
 Encoding: latin1
 License: GPL (>= 2)
-Packaged: 2012-10-20 18:27:33 UTC; maechler
+Packaged: 2012-11-01 20:20:29 UTC; maechler
 Repository: CRAN
-Date/Publication: 2012-10-21 13:29:59
+Date/Publication: 2012-11-02 07:51:21
